--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -880,3 +880,5 @@ chartacaeli.CatalogADC7237Record.substitute.ANames                 = ANames
 
 chartacaeli.CatalogADC7237Record.message.ereclen                   = {0} Zeichen pro Eintrag erwartet.
 chartacaeli.CatalogADC7237Record.message.erecval                   = {0} entspricht nicht erwartetem Muster {1}.
+
+chartacaeli.Artwork.message.runtime                                = Methode {0} brauchte {1} ms.
