Prepare CUDA optimization

--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -881,4 +881,6 @@ chartacaeli.CatalogADC7237Record.substitute.ANames                 = ANames
 chartacaeli.CatalogADC7237Record.message.ereclen                   = {0} Zeichen pro Eintrag erwartet.
 chartacaeli.CatalogADC7237Record.message.erecval                   = {0} entspricht nicht erwartetem Muster {1}.
 
-chartacaeli.Artwork.message.runtime                                = {0}.main() brauchte {1} ms.
+chartacaeli.Artwork.message.tasktime                               = {0}.main() brauchte {1} ms.
+
+chartacaeli.Artwork$PJ2TextureMapperGpu.message.cudastat           = {1} ms f\u00fcr {0} MB CPU/GPU-Transfers. {3} ms f\u00fcr {2} CUDA-Threads.
