--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -1,5 +1,7 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} ung\u00fcltig
 
+chartacaeli.ChartaCaeli.message.severr                             = nicht behebbarer Fehler
+
 chartacaeli.Configuration.message.default                          = eingestellt auf {0}.
 
 chartacaeli.Coordinate.substitute.x                                = X
