Set default error message for SEVERE

--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -1,6 +1,7 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} ung\u00fcltig
 
-chartacaeli.ChartaCaeli.message.severr                             = nicht behebbarer Fehler
+java.lang.Object.message.severr                                    = nicht behebbarer Fehler
+# chartacaeli.ChartaCaeli.message.severr                             = nicht behebbarer Fehler
 
 chartacaeli.Configuration.message.default                          = eingestellt auf {0}.
 
