Add log output in case of PS viewer failure

--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -1,7 +1,10 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} ung\u00fcltig
 
-java.lang.Object.message.severr                                    = nicht behebbarer Fehler
-# chartacaeli.ChartaCaeli.message.severr                             = nicht behebbarer Fehler
+java.lang.Object.message.eunrec                                    = nicht behebbarer Fehler.
+java.lang.Object.message.erunext                                   = Start des externen Programms {0} fehlgeschlagen.
+
+# chartacaeli.ChartaCaeli.message.eunrec                             = nicht behebbarer Fehler.
+chartacaeli.ChartaCaeli.message.erunext                            = Start des Postscript-Betrachters {0} fehlgeschlagen.
 
 chartacaeli.Configuration.message.default                          = eingestellt auf {0}.
 
