--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -1,10 +1,13 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} ung\u00fcltig
 
 java.lang.Object.message.eunrec                                    = nicht behebbarer Fehler.
-java.lang.Object.message.erunext                                   = Start des externen Programms {0} fehlgeschlagen.
+java.lang.Object.message.erunext                                   = Start des Systemprogramms {0} fehlgeschlagen.
+java.lang.Object.message.ewfile                                    = schreiben der Datei {0} fehlgeschlagen.
 
 # chartacaeli.ChartaCaeli.message.eunrec                             = nicht behebbarer Fehler.
-chartacaeli.ChartaCaeli.message.erunext                            = Start des Postscript-Betrachters {0} fehlgeschlagen.
+chartacaeli.ChartaCaeli.message.erunext                            = starten des Postscript-Betrachters {0} fehlgeschlagen.
+# chartacaeli.Artwork.message.ewfile                                 = schreiben der Datei {0} fehlgeschlagen.
+chartacaeli.Artwork.message.efltfmt                                = fehlerhafte Aufl\u00f6sung nach mapfilter.
 
 chartacaeli.Configuration.message.default                          = eingestellt auf {0}.
 
