--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -76,6 +76,11 @@ chartacaeli.DialDeg.substitute.angle.deg                           = skalagrd
 chartacaeli.DialDeg.substitute.angle.min                           = skalagrdmin
 chartacaeli.DialDeg.substitute.angle.sec                           = skalagrdsek
 chartacaeli.DialDeg.substitute.angle.frc                           = skalagrdfrk
+chartacaeli.DialDeg.substitute.mark.neg                            = strichdegrdneg
+chartacaeli.DialDeg.substitute.mark.deg                            = strichdegrd
+chartacaeli.DialDeg.substitute.mark.min                            = strichdegrdmin
+chartacaeli.DialDeg.substitute.mark.sec                            = strichdegrdsek
+chartacaeli.DialDeg.substitute.mark.frc                            = strichdegrdfrk
 
 chartacaeli.DialDay.substitute.day                                 = julianischertag
 chartacaeli.DialDay.substitute.day.YYYY                            = J
