--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -1,13 +1,20 @@
 chartacaeli.ParameterNotValidError.message.subject                 = {0} ung\u00fcltig
 
 java.lang.Object.message.eunrec                                    = nicht behebbarer Fehler.
-java.lang.Object.message.erunext                                   = Start des Systemprogramms {0} fehlgeschlagen.
+java.lang.Object.message.erunext                                   = starten des Systemprogramms {0} fehlgeschlagen.
 java.lang.Object.message.ewfile                                    = schreiben der Datei {0} fehlgeschlagen.
 
 # chartacaeli.ChartaCaeli.message.eunrec                             = nicht behebbarer Fehler.
 chartacaeli.ChartaCaeli.message.erunext                            = starten des Postscript-Betrachters {0} fehlgeschlagen.
 # chartacaeli.Artwork.message.ewfile                                 = schreiben der Datei {0} fehlgeschlagen.
 chartacaeli.Artwork.message.efltfmt                                = fehlerhafte Aufl\u00f6sung nach mapfilter.
+chartacaeli.Artwork.message.tasktime                               = {0}.main() brauchte {1} ms.
+
+chartacaeli.Artwork$PJ2TextureMapperGpu.message.cudastat           = {1} ms f\u00fcr {0} MB CPU/GPU-Transfers. {3} ms f\u00fcr {2} CUDA-Threads.
+
+chartacaeli.FieldOfView.message.eupdate                            = aktualisieren von {0} nicht m\u00f6glich mit {1}.
+chartacaeli.FieldOfView.message.enumint                            = {0} falsche Anzahl von \u00dcberschneidungen.
+chartacaeli.FieldOfView.message.update                             = aktualisieren mit Fall {0}.
 
 chartacaeli.Configuration.message.default                          = eingestellt auf {0}.
 
@@ -123,8 +130,10 @@ chartacaeli.CircleMeridian.substitute.azimuth.deg                  = azimutstd
 chartacaeli.CircleMeridian.substitute.azimuth.min                  = azimutstdmin
 chartacaeli.CircleMeridian.substitute.azimuth.sec                  = azimutstdsek
 chartacaeli.CircleMeridian.substitute.azimuth.frc                  = azimutstdfrk
-chartacaeli.CircleMeridian.substitute.terminus.x                   = endpunktX
-chartacaeli.CircleMeridian.substitute.terminus.y                   = endpunktY
+chartacaeli.CircleMeridian.substitute.alphaxy.x                    = startpunktX
+chartacaeli.CircleMeridian.substitute.alphaxy.y                    = startpunktY
+chartacaeli.CircleMeridian.substitute.omegaxy.x                    = endpunktX
+chartacaeli.CircleMeridian.substitute.omegaxy.y                    = endpunktY
 
 chartacaeli.CircleMeridian.message.eintsec                         = Schnitt mit {0} fehlgeschlagen.
 
@@ -133,8 +142,10 @@ chartacaeli.CircleParallel.substitute.altitude.deg                 = h\u00f6hegr
 chartacaeli.CircleParallel.substitute.altitude.min                 = h\u00f6hegrdmin
 chartacaeli.CircleParallel.substitute.altitude.sec                 = h\u00f6hegrdsek
 chartacaeli.CircleParallel.substitute.altitude.frc                 = h\u00f6hegrdfrk
-chartacaeli.CircleParallel.substitute.terminus.x                   = endpunktX
-chartacaeli.CircleParallel.substitute.terminus.y                   = endpunktY
+chartacaeli.CircleParallel.substitute.alphaxy.x                    = startpunktX
+chartacaeli.CircleParallel.substitute.alphaxy.y                    = startpunktY
+chartacaeli.CircleParallel.substitute.omegaxy.x                    = endpunktX
+chartacaeli.CircleParallel.substitute.omegaxy.y                    = endpunktY
 
 chartacaeli.CircleParallel.message.eintsec                         = Schnitt mit {0} fehlgeschlagen.
 
@@ -896,7 +907,3 @@ chartacaeli.CatalogADC7237Record.substitute.ANames                 = ANames
 
 chartacaeli.CatalogADC7237Record.message.ereclen                   = {0} Zeichen pro Eintrag erwartet.
 chartacaeli.CatalogADC7237Record.message.erecval                   = {0} entspricht nicht erwartetem Muster {1}.
-
-chartacaeli.Artwork.message.tasktime                               = {0}.main() brauchte {1} ms.
-
-chartacaeli.Artwork$PJ2TextureMapperGpu.message.cudastat           = {1} ms f\u00fcr {0} MB CPU/GPU-Transfers. {3} ms f\u00fcr {2} CUDA-Threads.
