--- a/chartacaeli_de.properties
+++ b/chartacaeli_de.properties
@@ -3,6 +3,7 @@ chartacaeli.ParameterNotValidError.message.subject                 = {0} ung\u00
 java.lang.Object.message.eunrec                                    = nicht behebbarer Fehler.
 java.lang.Object.message.erunext                                   = starten des Systemprogramms {0} fehlgeschlagen.
 java.lang.Object.message.ewfile                                    = schreiben der Datei {0} fehlgeschlagen.
+java.lang.Object.message.enoreg                                    = Objekt nicht in Registry.
 
 # chartacaeli.ChartaCaeli.message.eunrec                             = nicht behebbarer Fehler.
 chartacaeli.ChartaCaeli.message.erunext                            = starten des Postscript-Betrachters {0} fehlgeschlagen.
